testsuite/tests/contrib/lkt_semantic/enum_subclasses/test.out
Resolving test.lkt
==================
Id   <RefId "EnClass" test.lkt:6:21-6:28>
     references <EnumClassDecl "EnClass" test.lkt:4:1-4:56>

Id   <RefId "SubclassB" test.lkt:6:29-6:38>
     references <EnumClassAltDecl "SubclassB" test.lkt:4:32-4:41>

Id   <RefId "EnClass" test.lkt:6:41-6:48>
     references <EnumClassDecl "EnClass" test.lkt:4:1-4:56>

Id   <RefId "SubclassB" test.lkt:6:49-6:58>
     references <EnumClassAltDecl "SubclassB" test.lkt:4:32-4:41>

Expr <CallExpr test.lkt:6:41-6:60>
     has type <EnumClassAltDecl "SubclassB" test.lkt:4:32-4:41>

test.lkt:8:33: error: Cannot find entity `SubclassB` in this scope
7 | @invalid val invalid_en_class : SubclassB = SubclassB()
  |                                 ^^^^^^^^^              

test.lkt:8:45: error: Cannot find entity `SubclassB` in this scope
7 | @invalid val invalid_en_class : SubclassB = SubclassB()
  |                                             ^^^^^^^^^  

